Stop a background pic/text overlap.

--- a/mapit/static/mapit/sass/modules/_header.scss
+++ b/mapit/static/mapit/sass/modules/_header.scss
@@ -59,13 +59,13 @@
         @media (min-width: 32.8125em) {
             background: #bfb9c8 url(../img/global-header-large.jpg) no-repeat scroll center 74%;
             padding-top: 2em;
-            padding-left: 13em;
+            padding-left: 15em;
             padding-right: 2em;
         }
 
         @media (min-width: 43.5em) {
             padding-top: 1.5em;
-            padding-left: 18.75em;
+            padding-left: 20em;
             padding-right: 2em;
             padding-bottom: 2em;
         }
